--- a/main.css
+++ b/main.css
@@ -8,7 +8,6 @@ body {
 
 main {
     height: 100%;
-    max-width: 1000px;
 
 }
 
@@ -18,6 +17,7 @@ main {
 header{
     background-color: #4A3174;
     height:8px;
+
 }
 
 /** navbar**/
@@ -27,6 +27,7 @@ nav {
     max-width: 100%;
     margin-left: 113px;
     margin-right: 90px;
+    max-width: 1000px;
 
     
 }
@@ -320,6 +321,7 @@ footer {
     background-color:  #4A3174;
     height: 100%;
     margin-top:50px;
+
 }
 
 /** bulles et titre**/
@@ -398,4 +400,10 @@ span:nth-child(4){
 
 .footermenu >li {
     line-height: 16px;
+}
+
+li:hover {
+    background: rgba(255, 255, 255, 0.1);
+    box-shadow: 0px 4px 20px rgba(158, 158, 158, 0.07);
+    border-radius: 3px;
 }
