--- a/main.css
+++ b/main.css
@@ -261,12 +261,26 @@ form {
     width: 1017px;
     height: 157px;
     background: #FFFFFF;
-    box-shadow: 0px 4px 20px rgba(158, 158, 158, 0.79);
+    box-shadow: 0px 4px 20px rgba(158, 158, 158, 0.07);
     margin-bottom: 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding:15px;
+}
+
+
+.card-product:hover{
+    box-shadow: 0px 4px 20px rgba(158, 158, 158, 0.79);
+    background-color: #ffffff;
+}
+.card-product:hover p{
+    color:#EAAA08;
+    font-size: 27px;
+}
+
+.card-product-info:hover p:nth-child(3){
+    color:black;
 }
 
 
