--- a/main.css
+++ b/main.css
@@ -205,7 +205,7 @@ form {
 }
 
 
-.cards{
+#cards{
     display: flex;
 }
 .card {
@@ -289,7 +289,7 @@ form {
     padding:15px;
     width: auto;
 }
-.listitems{
+#listitems{
     width: 100%;
 }
 
