--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-
+/* Propriétés principales*/
 body {
     background-color:#FAFAFA;
     max-width: 100%;
@@ -13,11 +13,13 @@ main {
 .container {
     max-width: 1000px;
     justify-content: center;
+    margin:auto;
     
 }
-
+/* PARTIE NAVBAR*/
 
 /** liseré violet**/
+
 
 header{
     background-color: #4A3174;
@@ -29,12 +31,79 @@ header{
 /** navbar**/
 nav {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     width: 100%;
     margin-right: 90px;
     max-width: 1000px;
 
     
+}
+.nav li:nth-child(5){
+    display: none;
+}
+.nav li:nth-child(6){
+    display: none;
+}
+.burgerimg{
+    display: none;
+}
+
+
+@media(max-width:800px){
+    .burgerimg{
+    display: flex;
+    height:20px;
+    width: 20px;
+}
+}
+
+@media(max-width:800px){
+    .nav li:nth-child(5){
+        display: flex;
+    }
+}
+@media(max-width:800px){
+    .nav li:nth-child(6){
+        display: flex;
+    }
+}
+
+
+
+@media(max-width:800px){
+    nav {
+    display: flex;
+    flex-direction:column;
+    flex-wrap:wrap;
+    }
+}
+
+@media(max-width:800px){
+    .nav {
+    display: flex;
+    flex-direction:column;
+    flex-wrap:wrap;
+    }
+}
+
+@media(max-width:800px){
+    .boutton {
+    display: flex;
+    flex-direction:column;
+    flex-wrap:wrap;
+    }
+}
+@media(max-width:800px){
+    button.subscribe{
+    display: none;
+
+    }
+}
+@media(max-width:800px){
+    button.loggin{
+    display: none;
+    }
 }
 
 
@@ -46,21 +115,15 @@ nav {
     font-size: 20px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     line-height: 23px;
-
-
 }
 
-.nav li:nth-child(1){
+.nav li:nth-child(2){
     font-style: normal;
     font-weight: bold;
     font-size: 20px;
     line-height: 23px;
     color: #4A3174;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin-right: 10px;
-}
-.nav li:nth-child(2){
-
     margin-right: 10px;
 }
 
@@ -368,9 +431,7 @@ footer {
     left:14px;
 }
 
-.bulles {
-    display: inline-flex;
-}
+
 .logofooter h3{
     color:#F2F2F2;
     font-family: Roboto Condensed;
@@ -381,43 +442,7 @@ footer {
     display: inline-flex;
 }
 
-span:nth-child(1){
-    background-color: white;
-    width: 34.5px;
-    height: 34.5px;
-    position: relative;
-    border-radius: 50%;
-    top:42px;
-}
 
-span:nth-child(2){
-    background-color: white;
-    width: 29.9px;
-    height: 29.9px;
-    position: relative;
-    border-radius: 50%;
-    top:51px;
-    left:-12px;
-}
-span:nth-child(3){
-    background-color: white;
-    width: 25.3px;
-    height: 25.3px;
-    position: relative;
-    border-radius: 50%;
-    top:42px;
-    left:-20px;
-}
-
-span:nth-child(4){
-    background-color: white;
-    width: 20.7px;
-    height: 20.7px;
-    position: relative;
-    border-radius: 50%;
-    top:54px;
-    left:-26px;
-}
    /** menu footer**/
 .footermenu {
     display: inline-flex;
